[gd_scene load_steps=14 format=3 uid="uid://bdnhb8u3ujn2k"]

[ext_resource type="Script" path="res://scripts/deathscreen.gd" id="1_e35g1"]
[ext_resource type="Texture2D" uid="uid://cm13rg5ihqbjm" path="res://assets/deathscreen.png" id="2_8dppa"]
[ext_resource type="Texture2D" uid="uid://cxrkms8au3bk1" path="res://assets/options/tloopcji.png" id="2_w5l1e"]
[ext_resource type="AudioStream" uid="uid://blmifjgrb8kd7" path="res://sfx/death-ambient.wav" id="9_0vimh"]
[ext_resource type="Texture2D" uid="uid://cn3v3q5u42ace" path="res://assets/title/trybobrot.png" id="9_fxikg"]
[ext_resource type="Texture2D" uid="uid://cw1p8iugmqxpt" path="res://assets/options/menu.png" id="10_ggaaf"]
[ext_resource type="Texture2D" uid="uid://bjrp3nocbstqd" path="res://assets/options/menuhover.png" id="11_dj28i"]
[ext_resource type="AudioStream" uid="uid://c10gvvdjtl7c8" path="res://sfx/cogs.wav" id="14_gg3vr"]
[ext_resource type="AudioStream" uid="uid://dp0gv3gab50co" path="res://sfx/hover.wav" id="15_g5qfe"]
[ext_resource type="AudioStream" uid="uid://dnkpra7yvxfw7" path="res://sfx/klik.wav" id="16_rinfi"]

[sub_resource type="Animation" id="Animation_1ov03"]
resource_name = "fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qoxav"]
resource_name = "fade_out"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ev00"]
_data = {
"fade_in": SubResource("Animation_1ov03"),
"fade_out": SubResource("Animation_qoxav")
}

[node name="DeathScreen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_e35g1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tloopcji" type="Sprite2D" parent="Control"]
position = Vector2(951, 547)
texture = ExtResource("2_w5l1e")

[node name="Bg" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -4.0
offset_right = -52.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8dppa")

[node name="TrybMenu" type="Sprite2D" parent="Control"]
position = Vector2(309.876, 253.5)
scale = Vector2(0.917391, 0.917391)
texture = ExtResource("9_fxikg")

[node name="MenuButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 287.876
offset_top = 227.5
offset_right = 600.876
offset_bottom = 425.5
texture_normal = ExtResource("10_ggaaf")
texture_hover = ExtResource("11_dj28i")

[node name="Fade" type="ColorRect" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7ev00")
}

[node name="Corg" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_gg3vr")
volume_db = -24.0

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_g5qfe")

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_rinfi")
volume_db = -6.0

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_0vimh")

[connection signal="mouse_entered" from="Control/MenuButton" to="." method="_on_menu_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/MenuButton" to="." method="_on_menu_button_mouse_exited"]
[connection signal="pressed" from="Control/MenuButton" to="." method="_on_menu_button_pressed"]
